--- a/gallery.html
+++ b/gallery.html
@@ -161,14 +161,66 @@
     <h1 style="color:white;font-family:sans-serif;">POSTERS</h1>
    </div>
    <div class="poster-container">
-    <img src="images/showposters/hwposterhd.webp" loading="lazy" width="1280" height="1515" alt="Scanned image of a promotional poster for Itsy Bitsy's Halloween concert at Folks on November 2nd, 2024.">
-    <img src="images/showposters/gradposterhd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's graduation party concert on June 6th, 2024.">
-    <img src="images/showposters/folks1posterhd.webp" loading="lazy" width="805" height="927" alt="Scanned image of a promotional poster for Itsy Bitsy's first concert at Folks on November 10th, 2023.">
-    <img src="images/showposters/ghosthausposterhd.webp" loading="lazy" width="1440" height="1800" alt="Image of a promotional poster for Itsy Bitsy's concert with bands Dead Register and Mall Goth Moths on September 1st, 2023.">
-    <img src="images/showposters/gracieposter1hd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's show in Horseshoe Bend on July 18th, 2023. Drawn with colored pencils, the design is comprised of sunflowers, leaves, and explosions.">
-    <img src="images/showposters/gracieposter2hd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's show in Horseshoe Bend on July 18th, 2023. Drawn with colored pencils.">
-    <img src="images/showposters/canyonposter2hd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's concert for Canyon's birthday on June 16th, 2023.">
-    <img src="images/showposters/canyonposterhd.webp" loading="lazy" width="1440" height="1799" alt="Scanned image of a promotional poster for Itsy Bitsy's concert for Canyon's birthday on June 16th, 2023. Design is a collage of photos of Itsy Bitsy with Canyon on a background of newspapers.">
+    <picture>
+     <source media="(max-width:400px)" srcset="images/showposters/responsive/hwposterhd-400w.webp">
+     <source media="(max-width:600px)" srcset="images/showposters/responsive/hwposterhd-600w.webp">
+     <source media="(max-width:800px)" srcset="images/showposters/responsive/hwposterhd-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/showposters/responsive/hwposterhd-1000w.webp">
+     <img src="images/showposters/hwposterhd.webp" loading="lazy" width="1280" height="1515" alt="Image of a promotional poster for Itsy Bitsy's Halloween concert at Folks on November 2nd, 2024.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/showposters/responsive/gradposterhd-400w.webp">
+     <source media="(max-width:600px)" srcset="images/showposters/responsive/gradposterhd-600w.webp">
+     <source media="(max-width:800px)" srcset="images/showposters/responsive/gradposterhd-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/showposters/responsive/gradposterhd-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/showposters/responsive/gradposterhd-1200w.webp">
+     <img src="images/showposters/gradposterhd.webp" loading="lazy" width="1440" height="1800" alt="Image of a promotional poster for Itsy Bitsy's graduation party concert on June 6th, 2024.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/showposters/responsive/folks1posterhd-400w.webp">
+     <source media="(max-width:600px)" srcset="images/showposters/responsive/folks1posterhd-600w.webp">
+     <img src="images/showposters/folks1posterhd.webp" loading="lazy" width="805" height="927" alt="Scanned image of a promotional poster for Itsy Bitsy's first concert at Folks on November 10th, 2023.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/showposters/responsive/ghosthausposterhd-400w.webp">
+     <source media="(max-width:600px)" srcset="images/showposters/responsive/ghosthausposterhd-600w.webp">
+     <source media="(max-width:800px)" srcset="images/showposters/responsive/ghosthausposterhd-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/showposters/responsive/ghosthausposterhd-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/showposters/responsive/ghosthausposterhd-1200w.webp">
+     <img src="images/showposters/ghosthausposterhd.webp" loading="lazy" width="1440" height="1800" alt="Image of a promotional poster for Itsy Bitsy's concert with bands Dead Register and Mall Goth Moths on September 1st, 2023.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/showposters/responsive/gracieposter1hd-400w.webp">
+     <source media="(max-width:600px)" srcset="images/showposters/responsive/gracieposter1hd-600w.webp">
+     <source media="(max-width:800px)" srcset="images/showposters/responsive/gracieposter1hd-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/showposters/responsive/gracieposter1hd-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/showposters/responsive/gracieposter1hd-1200w.webp">
+     <img src="images/showposters/gracieposter1hd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's show in Horseshoe Bend on July 18th, 2023. Drawn with colored pencils, the design is comprised of sunflowers, leaves, and explosions.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/showposters/responsive/gracieposter2hd-400w.webp">
+     <source media="(max-width:600px)" srcset="images/showposters/responsive/gracieposter2hd-600w.webp">
+     <source media="(max-width:800px)" srcset="images/showposters/responsive/gracieposter2hd-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/showposters/responsive/gracieposter2hd-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/showposters/responsive/gracieposter2hd-1200w.webp">
+     <img src="images/showposters/gracieposter2hd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's show in Horseshoe Bend on July 18th, 2023. Drawn with colored pencils.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/showposters/responsive/canyonposter2hd-400w.webp">
+     <source media="(max-width:600px)" srcset="images/showposters/responsive/canyonposter2hd-600w.webp">
+     <source media="(max-width:800px)" srcset="images/showposters/responsive/canyonposter2hd-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/showposters/responsive/canyonposter2hd-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/showposters/responsive/canyonposter2hd-1200w.webp">
+     <img src="images/showposters/canyonposter2hd.webp" loading="lazy" width="1440" height="1800" alt="Scanned image of a promotional poster for Itsy Bitsy's concert for Canyon's birthday on June 16th, 2023.">
+    </picture>
+    <picture>
+     <source media="(max-width:400px)" srcset="images/showposters/responsive/canyonposterhd-400w.webp">
+     <source media="(max-width:600px)" srcset="images/showposters/responsive/canyonposterhd-600w.webp">
+     <source media="(max-width:800px)" srcset="images/showposters/responsive/canyonposterhd-800w.webp">
+     <source media="(max-width:1000px)" srcset="images/showposters/responsive/canyonposterhd-1000w.webp">
+     <source media="(max-width:1200px)" srcset="images/showposters/responsive/canyonposterhd-1200w.webp">
+     <img src="images/showposters/canyonposterhd.webp" loading="lazy" width="1440" height="1799" alt="Scanned image of a promotional poster for Itsy Bitsy's concert for Canyon's birthday on June 16th, 2023. Design is a collage of photos of Itsy Bitsy with Canyon on a background of newspapers.">
+    </picture>
    </div>
   </div>
   <div class="footer">
