itsy bitsy gallery 2.0
hell yeah

to do:
- make pagelinks responsive for mobile instead of just hiding it in portrait mode
- make section headers have more contrast
- fix that damn page background being stupid

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
  <head>
   <title>Gallery | Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com/gallery">
-  <meta name="description" content="The official page for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="description" content="The official website for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <link rel="stylesheet" href="gallery.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, itsy bitsy photos, pictures, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
@@ -15,14 +15,14 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/og/galleryshar.png">
   <meta property="og:title" content="Gallery | Itsy Bitsy">
-  <meta property="og:description" content="The official page for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta property="og:description" content="The official website for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="itsybitsyband.com/gallery">
   <meta property="twitter:url" content="https://itsybitsyband.com/gallery">
   <meta name="twitter:title" content="Gallery | Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
-  <meta name="twitter:description" content="The official page for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="twitter:description" content="The official website for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <meta name="twitter:image" content="images/og/galleryshar.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
@@ -34,22 +34,38 @@
   <meta name="theme-color" content="#ffffff">
  </head>
  <body>
-  <div class="container" style="padding-bottom:0;">
+  <div class="container" id="navbar" style="background-color:#000000;padding:1.5rem;">
    <div class="menubar">
-    <ul>
-     <li>
-      <a href="./" style="text-decoration:none;" aria-label="The home page of Itsy Bitsy's website" target="_self">
-       <button class="menu" aria-label="Click to return to the home page of Itsy Bitsy's website.">
-        <p style="font-size:24px;" class="buttonp"><b>HOME</b></p>
-       </button>
-      </a>
-     </li>
-    </ul>
+    <div class="pagelinks">
+     <ul>
+      <li>
+       <a href="./" style="text-decoration:none;" aria-label="The home page of Itsy Bitsy's website" target="_self">
+        <button class="menu" aria-label="Click to return to the home page of Itsy Bitsy's website.">
+         <p style="font-size:24px;" class="buttonp"><b>HOME</b></p>
+        </button>
+       </a>
+      </li>
+     </ul>
+    </div>
+    <div class="seclinks">
+     <ul>
+      <li>
+       <a href="#photos"><b>PHOTOS</b></a>
+      </li>
+      <li>
+       <a href="#posters"><b>POSTERS</b></a>
+      </li>
+      <li>
+       <a href="#videos"><b>VIDEOS</b></a>
+      </li>
+     </ul>
+    </div>
    </div>
   </div>
+  <section>
   <div class="container" id="photos" style="padding-bottom:0;">
    <div class="header">
-    <h1 style="color:white;font-family:sans-serif;">PHOTO GALLERY</h1>
+    <h1 style="color:white;font-family:sans-serif;">PHOTOS</h1>
    </div>
    <div class="image-container">
     <picture>
@@ -156,6 +172,8 @@
     </picture>
    </div>
   </div>
+  </section>
+  <section>
   <div class="container" id="posters">
    <div class="header">
     <h1 style="color:white;font-family:sans-serif;">POSTERS</h1>
@@ -223,6 +241,28 @@
     </picture>
    </div>
   </div>
+  </section>
+  <section>
+  <div class="container" id="videos" loading="lazy">
+   <div class="header">
+    <h1 style="color:white;font-family:sans-serif;">VIDEOS</h1>
+   </div>
+   <div class="video-container">
+    <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/-2FDau1UZQo?si=GoQ2n3frFy4w8aRv"
+            title="Itsy Bitsy - Dreams as Prey (Live 6/6/2024)" style="border:none;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
+    <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/FJWpVxMbKGs?si=tEvSbarp8Ro1Azcf"
+            title="Itsy Bitsy - Connection (Live 11/10/2023)" style="border:none;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
+    <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/dfiknk4vRoQ?si=vXAYRAizzRwMmjn7"
+            title="Itsy Bitsy - Forget Me Not (Live 3/15/2023)" style="border:none;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    </iframe>
+   </div>
+  </div>
+  </section>
   <div class="footer">
    <p style="color:white;font-size:12px;" class="bottomright">©2024 Itsy Bitsy. Tovi, Lilly, Maz, Jack, and Brian.</p>
   </div>
