--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <head>
   <title>Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com">
-  <meta name="description" content="The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta name="description" content="The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <link rel="stylesheet" href="style1.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
@@ -15,14 +15,14 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="images/og/itsybitsyshar2.png">
   <meta property="og:title" content="Itsy Bitsy">
-  <meta property="og:description" content="The official page of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
+  <meta property="og:description" content="The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="itsybitsyband.com">
   <meta property="twitter:url" content="https://itsybitsyband.com">
   <meta name="twitter:title" content="Itsy Bitsy">
   <meta property="twitter:site" content="@ItsyTweetsy">
-  <meta name="twitter:description" content="The official page for Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy">
+  <meta name="twitter:description" content="The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
   <meta name="twitter:image" content="images/og/itsybitsyshar2.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fstuff/apple-touch-icon.png">
