fuck YouTube iframes, we goin lazy with this one

--- a/gallery.html
+++ b/gallery.html
@@ -248,18 +248,35 @@
     <h1 style="color:white;font-family:sans-serif;">VIDEOS</h1>
    </div>
    <div class="video-container">
-    <iframe width="560" height="315"
-            src="https://www.youtube.com/embed/-2FDau1UZQo?si=GoQ2n3frFy4w8aRv"
-            title="Itsy Bitsy - Dreams as Prey (Live 6/6/2024)" style="border:none;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    <iframe
+      loading="lazy"
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/-2FDau1UZQo&autoplay=1"
+      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/-2FDau1UZQo?autoplay=1><img src=https://img.youtube.com/vi/-2FDau1UZQo/hqdefault.jpg alt='Itsy Bitsy - Dreams as Prey (Live 6/6/2024)'><span>▶</span></a>"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+      title="Itsy Bitsy - Dreams as Prey (Live 6/6/2024)">
     </iframe>
-    <iframe width="560" height="315"
-            src="https://www.youtube.com/embed/FJWpVxMbKGs?si=tEvSbarp8Ro1Azcf"
-            title="Itsy Bitsy - Connection (Live 11/10/2023)" style="border:none;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+    <iframe
+      loading="lazy"
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/FJWpVxMbKGs&autoplay=1"
+      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/FJWpVxMbKGs?autoplay=1><img src=https://img.youtube.com/vi/FJWpVxMbKGs/hqdefault.jpg alt='Itsy Bitsy - Connection (Live 11/10/2023)'><span>▶</span></a>"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+      title="Itsy Bitsy - Connection (Live 11/10/2023)">
     </iframe>
-    <iframe width="560" height="315"
-            src="https://www.youtube.com/embed/dfiknk4vRoQ?si=vXAYRAizzRwMmjn7"
-            title="Itsy Bitsy - Forget Me Not (Live 3/15/2023)" style="border:none;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
+    <iframe loading="lazy"
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/dfiknk4vRoQ&autoplay=1"
+      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/dfiknk4vRoQ?autoplay=1><img src=https://img.youtube.com/vi/dfiknk4vRoQ/hqdefault.jpg alt='Itsy Bitsy - Forget Me Not (Live 3/15/2023)'><span>▶</span></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+      title="Itsy Bitsy - Forget Me Not (Live 3/15/2023)">
+   </iframe>
    </div>
   </div>
   </section>
