--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <title>Gallery | Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com/gallery">
   <meta name="description" content="The official website for photos of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
-  <link rel="stylesheet" href="gallery.css">
+  <link rel="stylesheet" href="css/gallery.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, itsy bitsy photos, pictures, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
