--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Itsy Bitsy</title>
   <link rel="canonical" href="https://itsybitsyband.com">
   <meta name="description" content="The official website of Boise’s own noise-rock, dream-pop, and post-punk band Itsy Bitsy.">
-  <link rel="stylesheet" href="style1.css">
+  <link rel="stylesheet" href="css/style1.css">
   <meta name="googlebot" content="notranslate">
   <meta name="keywords" content="Itsy Bitsy, Itsy Bitsy band, Itsy Bitsy music, Itsy Bitsy members, band, rock, alternative, alternative rock, alt-rock, dream pop, dream-pop, dreampop, noise rock, noise-rock, noiserock, shoegaze, shoe-gaze, punk, punk rock, punk-rock, post-punk, Boise, Idaho, North-American, American, music, ethereal">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
