--- a/gallery.html
+++ b/gallery.html
@@ -48,17 +48,9 @@
      </ul>
     </div>
     <div class="seclinks">
-     <ul>
-      <li>
-       <a href="#photos"><b>PHOTOS</b></a>
-      </li>
-      <li>
-       <a href="#posters"><b>POSTERS</b></a>
-      </li>
-      <li>
-       <a href="#videos"><b>VIDEOS</b></a>
-      </li>
-     </ul>
+     <a href="#photos"><b>PHOTOS</b></a>
+     <a href="#posters"><b>POSTERS</b></a>
+     <a href="#videos"><b>VIDEOS</b></a>
     </div>
    </div>
   </div>
@@ -82,7 +74,7 @@
      <source media="(max-width:600px)" srcset="images/band/responsive/12-600w.webp">
      <source media="(max-width:800px)" srcset="images/band/responsive/12-800w.webp">
      <source media="(max-width:1000px)" srcset="images/band/responsive/12-1000w.webp">
-     <img src="images/band/12.webp" loading="lazy" width="1253" height="1253" alt="Image of the heads of Itsy Bitsy in a circle. Clockwise from top: Tovi Chance, Brian Dyer, Maz Della Badia, Jack Tiderman, Lilly Furlow.">
+     <img src="images/band/12.webp" width="1253" height="1253" alt="Image of the heads of Itsy Bitsy in a circle. Clockwise from top: Tovi Chance, Brian Dyer, Maz Della Badia, Jack Tiderman, Lilly Furlow.">
     </picture>
     <picture>
      <source media="(max-width:400px)" srcset="images/band/responsive/4-400w.webp">
@@ -262,7 +254,7 @@
       width="560"
       height="315"
       src="https://www.youtube.com/embed/-2FDau1UZQo&autoplay=1"
-      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/-2FDau1UZQo?autoplay=1><img src=https://img.youtube.com/vi/-2FDau1UZQo/hqdefault.jpg alt='Itsy Bitsy - Dreams as Prey (Live 6/6/2024)'><span>▶</span></a>"
+      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/-2FDau1UZQo?autoplay=1><img src=images/thumbs/itsybitsythumb3.webp alt='Itsy Bitsy - Dreams as Prey (Live 6/6/2024)'><span>▶</span></a>"
       frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
@@ -273,7 +265,7 @@
       width="560"
       height="315"
       src="https://www.youtube.com/embed/FJWpVxMbKGs&autoplay=1"
-      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/FJWpVxMbKGs?autoplay=1><img src=https://img.youtube.com/vi/FJWpVxMbKGs/hqdefault.jpg alt='Itsy Bitsy - Connection (Live 11/10/2023)'><span>▶</span></a>"
+      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/FJWpVxMbKGs?autoplay=1><img src=images/thumbs/itsybitsythumb2.webp alt='Itsy Bitsy - Connection (Live 11/10/2023)'><span>▶</span></a>"
       frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
@@ -283,7 +275,7 @@
       width="560"
       height="315"
       src="https://www.youtube.com/embed/dfiknk4vRoQ&autoplay=1"
-      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/dfiknk4vRoQ?autoplay=1><img src=https://img.youtube.com/vi/dfiknk4vRoQ/hqdefault.jpg alt='Itsy Bitsy - Forget Me Not (Live 3/15/2023)'><span>▶</span></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+      srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/dfiknk4vRoQ?autoplay=1><img src=images/thumbs/itsybitsythumb1.webp alt='Itsy Bitsy - Forget Me Not (Live 3/15/2023)'><span>▶</span></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
       title="Itsy Bitsy - Forget Me Not (Live 3/15/2023)">
    </iframe>
    </div>
