fixing the reverse stupid damn order of the seclinks

--- a/gallery.html
+++ b/gallery.html
@@ -48,9 +48,11 @@
      </ul>
     </div>
     <div class="seclinks">
-     <a href="#photos"><b>PHOTOS</b></a>
-     <a href="#posters"><b>POSTERS</b></a>
-     <a href="#videos"><b>VIDEOS</b></a>
+     <div class="seclinksb">
+      <a href="#photos"><b>PHOTOS</b></a>
+      <a href="#posters"><b>POSTERS</b></a>
+      <a href="#videos"><b>VIDEOS</b></a>
+     </div>
     </div>
    </div>
   </div>
